# ResumePilot

./: .env.production.example  .gitignore  Context.md  README.md  docker-compose.yml
Backend/: .dockerignore  .env.example  Dockerfile  README.md  alembic.ini  pyproject.toml
Backend/app/: __init__.py  main.py
Backend/app/api/: deps.py
Backend/app/core/: config.py  production.py  security.py
Backend/app/data/: __init__.py  provider_pricing.json  skill_dictionary.json
Backend/evals/: match_score_cases.json
Backend/migrations/: README.md  env.py
Backend/requirements/: README.md  py312-build.lock.txt  py312-dev-ai.constraints.txt  py312-dev.constraints.txt  py312-production.lock.txt
Backend/scripts/: bootstrap_py312.sh  migrate_runtime.py  run_backend_quality_gate.py  run_golden_evals.py  run_postgres_migration_gate.py
Backend/tests/: api_helpers.py  conftest.py  test_agent_workflow.py  test_analysis_api.py  test_applications_api.py  test_audit_privacy_api.py  test_auth_signature.py  test_backend_quality_gate.py  test_claim_validation.py  test_docx_resume_renderer.py  test_golden_evals.py  test_health.py  test_identity_service.py  test_job_parser.py  test_langgraph_workflow.py  test_latex_resume_renderer.py  test_matcher.py  test_migrations.py  test_openclaw.py  test_pdf_resume_compiler.py  test_provider_pricing.py  test_report_export_boundary.py  test_report_generator.py  test_resume_parser.py  test_settings.py  test_tailored_resume_api.py  test_tenant_isolation.py  test_usage_limits.py  test_validator.py  test_workflow_approval.py  test_workflow_jobs.py
(+243 files in other folders)
