[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "resumepilot"
version = "0.1.0"
description = "Evidence-backed job application copilot built with FastAPI and CrewAI-ready contracts."
readme = "README.md"
requires-python = ">=3.12,<3.15"
dependencies = [
    "alembic>=1.14.0",
    "beautifulsoup4>=4.12.3",
    "email-validator>=2.2.0",
    "fastapi>=0.115.0",
    "pydantic>=2.8.0",
    "pydantic-settings>=2.4.0",
    "pypdf>=4.3.0",
    "python-docx>=1.1.2",
    "python-dotenv>=1.0.1",
    "python-multipart>=0.0.9",
    "readability-lxml>=0.8.1",
    "requests>=2.32.3",
    "sqlalchemy>=2.0.32",
    "uvicorn[standard]>=0.30.6",
]

[project.optional-dependencies]
dev = [
    "httpx>=0.27.0",
    "pytest>=8.3.2",
    "pytest-cov>=5.0.0",
    "respx>=0.21.1",
    "ruff>=0.6.2",
]

[project.scripts]
resumepilot-api = "app.main:run"

[tool.setuptools.packages.find]
include = ["app*"]

[tool.setuptools.package-data]
"app.data" = ["*.json"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
pythonpath = ["."]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "SIM"]
ignore = ["B008"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
